--- a/styles.css
+++ b/styles.css
@@ -109,11 +109,25 @@ header {
 body {
   color: var(--blue1);
   display: grid;
-  grid-template-rows: auto auto 1fr auto 1fr auto;
+  grid-template-rows: auto auto 1fr auto 1fr auto 3rem;
   align-items: start;
+  font-size: 1.2rem;
 }
 body > * {
   margin-bottom: 1.2rem;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+span {
+  text-align: center;
+}
+footer {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: var(--blue1);
+  color: var(--white);
 }
 .today {
   display: flex;
@@ -174,7 +188,19 @@ body > * {
   font-weight: bold;
   border-bottom: 2px solid var(--red);
 }
+.today-hourly::-webkit-scrollbar {
+  width: auto;
+}
+.today-hourly::-webkit-scrollbar-track {
+  background: var(--blue3);
+}
+.today-hourly::-webkit-scrollbar-thumb {
+  background-color: var(--blue2);
+  border-radius: 20px;
+  border: 3px solid var(--blue3);
+}
 .today-hourly {
+  scrollbar-color: var(--blue2) var(--blue3);
   margin-top: 2rem;
   flex-wrap: nowrap;
   overflow-x: auto;
@@ -192,4 +218,8 @@ body > * {
   border-radius: 12px;
   align-self: center;
   padding: 1rem 2rem;
+}
+.hour-card {
+  width: 7.4rem;
+  flex-shrink: 0;
 }
